# segmented-rs

./: Cargo.toml  README.md  Readme.md
benches/: list.rs  vec.rs
src/: alloc.rs  lib.rs  list.rs  main.rs  mmap.rs
