[package]
name = "segmented-rs"
version = "0.0.1"
edition = "2024"
description = "A (zero dependency) rusty port of a segmented list and bump allocator that was initially implemented in c"
license-file = "LICENSE"
repository = "https://github.com/xnacly/segmented-rs/"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "list"
harness = false

[[bench]]
name = "vec"
harness = false

[features]
trace = []

